--- a/pom.xml
+++ b/pom.xml
@@ -14,14 +14,15 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>8</source>
-                    <target>8</target>
+                    <source>14</source>
+                    <target>14</target>
                 </configuration>
             </plugin>
         </plugins>
     </build>
     <modules>
         <module>module-1-intro</module>
+        <module>module2-OOP</module>
     </modules>
 
     <dependencies>
